refactor(seed): reduce scope and align validation details